--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ license = "GPL-3.0-or-later"
 imap = { version = "2.4.1", default-features = false }
 itertools = "0.10.0"
 maildir = { path = "../maildir" }
+mailparse = "0.13.2"
 rustls-connector = "0.13.1"
+ascii_table = { git = "https://gitlab.com/arnekeller/ascii-table.git", rev = "7fffb5d93b8c63283fc1359ee3c6dbfcf12ed90b" }
