list: thread tree listing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ anyhow = "1.0.40"
 mailproc = { git = "https://github.com/FliegendeWurst/mailproc.git", branch = "master" }
 subprocess = "0.2.6"
 mime2ext = "0.1.2"
+petgraph = "0.5.1"
