--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ mailproc = { git = "https://github.com/FliegendeWurst/mailproc.git", branch = "m
 subprocess = "0.2.6"
 mime2ext = "0.1.2"
 petgraph = "0.5.1"
+cursive = { version = "0.16.3", default-features = false, features = ["termion-backend"] }
+cursive_tree_view = "0.7.0"
