--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ mailparse = "0.13.2"
 rustls-connector = "0.13.1"
 ascii_table = { git = "https://gitlab.com/arnekeller/ascii-table.git", branch = "master" }
 chrono = "0.4.19"
-# remove when 0.24.3 is released
-rusqlite = { git = "https://github.com/rusqlite/rusqlite", branch = "master", features = ["bundled"] }
+rusqlite = { version = "0.25.0", features = ["bundled"] }
 rustyline = "8.0.0"
 moins = { git = "https://github.com/FliegendeWurst/moins", branch = "master" }
 anyhow = "1.0.40"
@@ -26,6 +25,13 @@ mime2ext = "0.1.2"
 petgraph = "0.5.1"
 cursive = { version = "0.16.3", default-features = false, features = ["termion-backend"] }
 cursive_tree_view = { git = "https://github.com/FliegendeWurst/cursive_tree_view.git", branch = "master" }
+directories-next = "2.0.0"
+serde_derive = "1.0.25"
+serde = "1.0.25"
+toml = "0.5.8"
+once_cell = "1.7.2"
+parking_lot = "0.11.1"
+log = "0.4.14"
 
 [profile.release]
-overflow-checks = true
+overflow-checks = true # useful when debugging
