--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ toml = "0.5.8"
 once_cell = "1.7.2"
 parking_lot = "0.11.1"
 log = "0.4.14"
+html2text = "0.2.1"
 
 [profile.release]
 overflow-checks = true # useful when debugging
